# reciprocal_frequency_counter_earthtoernie

./: .gitignore  CMakeLists.txt  README.md  clion.patch
NOTES/: install_raspberry_pico.sh  setup.txt
i2c/oled_i2c/: Readme.md  img_to_array.py  oled_i2c.c  raspberry26x32.h  show_graphic.py
kicad_pico_counter_alt/: allegro_pico_counter_alt.kicad_pcb  allegro_pico_counter_alt.kicad_pro  allegro_pico_counter_alt.kicad_sch  part_notes.txt  sym-lib-table  z_proj_parts.kicad_sym
kicad_pico_counter_new/: allegro_pico_counter_new.kicad_pcb  allegro_pico_counter_new.kicad_pro  allegro_pico_counter_new.kicad_sch
libraries/: CMakeLists.txt
libraries/pico_ss_oled/: CMakeLists.txt  pico_ss_oled.cmake  ss_oled.c
libraries/pico_ss_oled/include/: ss_oled.h
pico_display/: CMakeLists.txt  count.pio  demo.cpp  hello_counter.py  pio_counter_milestone_0.py  pio_counter_milestone_1.py
pico_display_oled/: BitBang_I2C.c  BitBang_I2C.h  CMakeLists.txt  demo.cpp  hello_counter.py  main.cpp  ss_oled.c  ss_oled.cpp  ss_oled.h  ss_oled.hpp  stripped.hpp
pico_display_sensors/: CMakeLists.txt  demo.cpp  demo_orig.cpp
pico_pio_interrupts/: CMakeLists.txt  demo.cpp  pico_pio_interrupts.pio
pio/i2c/: i2c_bus_scan.c
pio/pwm/: pwm.c  pwm.pio
pio/squarewave/: CMakeLists.txt  squarewave.c
sht40/: CMakeLists.txt  sht40.cpp
squaregen/: CMakeLists.txt  README.md  main.c
